<resources>
    <string name="app_name">Quitter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edittext_quittime_string">When did you quit?</string>
    <string name="submit_data">Submit Data</string>
    <string name="how_many_ciggaretes_per_day">How many ciggaretes per day?</string>
    <string name="how_many_in_a_pack">How many in a pack?</string>
    <string name="time_to_smoke_one_cigarette_minutes">Time to smoke one cigarette? (minutes)</string>
    <string name="price_per_pack">Price per pack</string>
    <string name="when_did_you_quit">When did you quit?</string>
    <string name="how_many_cigs_per_day">How many cigs per day?</string>
    <string name="how_many_cigarettes_per_pack">How many cigarettes per pack?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="haven_t_smoked_in">Haven\'t smoked in</string>
    <string name="health_header_1">Blood pressure</string>
    <string name="health_description_1">Blood pressure, heart rate and body temperature return to normal.</string>
    <string name="filler">Filler</string>
    <string name="health_congratulations">Congratulations, you reached this goal!</string>
    <string name="health_reached">Reached in:</string>
    <string name="time_minutes">minutes</string>
    <string name="time_hours">hours</string>
    <string name="time_days">days</string>
    <string name="health_description_2">8 hours: Carbon monoxide levels in your blood return to normal</string>
    <string name="health_header_2">Carbon Monoxide</string>
</resources>
